More functionality to multiscript